tests/rosetta/out/Java/a+b.java
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
// a+b.mochi
public class A+b {
    static void main() {
        Object a = int(input());
        Object b = int(input());
        System.out.println(a + b);
    }
    public static void main(String[] args) {
        main();
    }
}
